# QE_Resubmit_Python

./: .gitignore  README.md  architecture_overview.txt  pyproject.toml  requirements.txt
config/: paths.yaml  sweep.yaml
configs/: data_paths.yaml  defaults.yaml  priors_example.yaml  warmup.yaml
data/: .gitkeep  bond_yields.csv  fac_draws_K4.mat  sp500_data.csv
docs/: algorithm_overview  model_writeup
scripts/: compute_equity_series.py  make_synthetic_config.py  one_click_mcmc.bat  one_click_mcmc.sh  price_equity.py  run_bubble_step.py  run_gibbs.py  run_mcmc.py  test_bubble_pmhmc.py
src/: equity_constraint.py
src/artifacts/: __init__.py  registry.py
src/bubble/: data_io.py
src/common/: __init__.py  jax_vol_mapping.py  vol_mapping.py
src/cw2017/: __init__.py  config.py  typing.py
src/data/: __init__.py  market_data.py  random_m_loader.py
src/driver/: __init__.py  sweep.py  typing.py
src/engine/: __init__.py  run_bond_sweep.py
src/equity/: __init__.py  price_equity.py  pricing_io.py
src/hmc_gibbs/: __init__.py  config.py  typing.py
src/kalman/: __init__.py  ffbs.py  srkf.py
src/models/: __init__.py  ss_builders_3c.py
src/pg/: __init__.py  pgas.py
tests/: test_artifacts_equity.py  test_block3a_design.py  test_block3a_smoke.py  test_block3b_smoke.py  test_covariance_blocks.py  test_equity_constraint.py  test_equity_recursions_stub.py  test_kalman_ffbs.py  test_kalman_srkf.py  test_kalman_stub.py  test_market_data.py  test_pgas_block.py  test_shapes.py  test_trunc_gauss.py  test_utils.py  test_utils_packages.py  test_vol_mapping.py
(+78 files in other folders)
